updated for PyQt5
Signed-off-by: Adam McNicol <adam@mcnicol.me>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ __pycache__/
 *.pyc
 __pycache__
 /__pycache__/crop_class.cpython-33.pyc
+/__pycache__/potato_class.cpython-33.pyc
+/__pycache__/wheat_class.cpython-33.pyc
